# jera

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
jera/: __about__.py  __init__.py  errors.py  frozen.py  sentinel.py  typed.py  typedattrs.py  undefined.py  util.py
jera/domain/: building_block.py  value_object.py
requirements/: dev-requirements.txt
tests/: test_about.py  test_frozen.py  test_sentinel.py
tests/domain/: test_value_object.py  value_object.feature
