[tool.mypy]
exclude = "__init__.py"
strict = true
warn_return_any = false
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry]
name = "jera"
version = "0.0.0a"
description = "..."
authors = ["INSPXRXD <inspxrxd@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/INSPXRXD/jera"
repository = "https://github.com/INSPXRXD/jera"
documentation = "https://github.com/INSPXRXD/jera"
include = []
keywords = ["Domain Driven Design"]
packages = [
    { include = "jera" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/INSPXRXD/jera/issues"
"Documentation" = "https://github.com/INSPXRXD/jera"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^8"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"